--- a/roles/homer/tasks/main.yml
+++ b/roles/homer/tasks/main.yml
@@ -24,4 +24,4 @@
       traefik.enable: "true"
       traefik.http.routers.homer.rule: "Host(`{{ homer_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.homer.loadbalancer.server.port: "8080"
-      traefik.http.routers.homer.middlewares: "auth@file,my-headers@file"
+      traefik.http.routers.homer.middlewares: "auth@file,secure-headers@file"
