--- a/roles/mayurifag_github_io/tasks/main.yml
+++ b/roles/mayurifag_github_io/tasks/main.yml
@@ -4,10 +4,11 @@
     name: mayurifag_github_io
     image: mayurifag/mayurifag.github.io:latest
     pull: true
+    recreate: true
     restart_policy: unless-stopped
     memory: "{{ mayurifag_github_io_memory }}"
     labels:
       traefik.enable: "{{ mayurifag_github_io_available_externally }}"
       traefik.http.routers.mayurifag_github_io.rule: "Host(`{{ server_hostname }}`)"
-      traefik.http.services.mayurifag_github_io.loadbalancer.server.port: "8005"
-      traefik.http.routers.mayurifag_github_io.middlewares: "my-headers@file"
+      traefik.http.services.mayurifag_github_io.loadbalancer.server.port: "80"
+      traefik.http.routers.mayurifag_github_io.middlewares: "secure-headers@file"
