--- a/roles/navidrome/tasks/main.yml
+++ b/roles/navidrome/tasks/main.yml
@@ -20,7 +20,7 @@
     image: deluan/navidrome:latest
     user: "{{ navidrome_user_and_group }}"
     pull: true
-    recreate: yes
+    recreate: true
     volumes:
       - "{{ navidrome_data_directory }}/:/data"
       - "{{ navidrome_music_directory }}:/music:ro"
@@ -35,4 +35,4 @@
       traefik.enable: "{{ navidrome_available_externally }}"
       traefik.http.routers.navidrome.rule: "Host(`{{ navidrome_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.navidrome.loadbalancer.server.port: "4533"
-      traefik.http.routers.navidrome.middlewares: "my-headers@file"
+      traefik.http.routers.navidrome.middlewares: "secure-headers@file"
