--- a/roles/portainer/defaults/main.yml
+++ b/roles/portainer/defaults/main.yml
@@ -2,7 +2,7 @@
 portainer_enabled: true
 portainer_available_externally: "true"
 
-portainer_data_directory: "{{ docker_home }}/portainer/config"
+portainer_data_directory: "{{ docker_home }}/portainer/"
 portainer_subdomain: "portainer"
 
 # specs
