--- a/provisioning.yml
+++ b/provisioning.yml
@@ -30,10 +30,6 @@
       tags:
         - mayurifag-general
 
-    - role: upgrade_packages
-      tags:
-        - mayurifag-general
-
     - role: users
       tags:
         - mayurifag-general
@@ -41,13 +37,32 @@
     ###
     ### Requirements
     ###
+    # TODO: role requires gather_facts: yes - fix it or change to another role
+    # TODO: recheck on clear installation
+    # TODO: make cron task to remove unused docker images
     - role: geerlingguy.docker
-    - role: geerlingguy.pip
-    - role: darkwizard242.lazydocker
+      tags:
+        - docker
+      when: (docker_enabled | default(False))
 
-    ##
-    ## Applications
-    ##
+    - role: darkwizard242.lazydocker
+      tags:
+        - lazydocker
+      when: (lazydocker_enabled | default(False))
+
+    ###
+    ### Docker applications
+    ###
+    - role: traefik
+      tags:
+        - traefik
+      when: (traefik_enabled | default(False))
+
+    - role: mayurifag_github_io
+      tags:
+        - mayurifag_github_io
+      when: (mayurifag_github_io_enabled | default(False))
+
     - role: proxy
       tags:
         - proxy
@@ -63,24 +78,13 @@
         - wireguard
       when: (wireguard_enabled | default(False))
 
-    ###
-    ### Docker applications
-    ###
-    - role: traefik
-      tags:
-        - traefik
-      when: (traefik_enabled | default(False))
-
-    - role: mayurifag_github_io
-      tags:
-        - mayurifag_github_io
-      when: (mayurifag_github_io_enabled | default(False))
-
     - role: homer
       tags:
         - homer
       when: (homer_enabled | default(False))
 
+    # TODO: for ubuntu have to disable systemd-resolved service, occupies 53 port
+    # TODO: for ubuntu - change resolv.conf
     - role: blocky
       tags:
         - blocky
@@ -146,6 +150,14 @@
         - vaultwarden
       when: (vaultwarden_enabled | default(False))
 
+    - role: nextcloud
+      tags:
+        - nextcloud
+      when: (nextcloud_enabled | default(False))
+
     - role: geerlingguy.security
+      tags:
+        - security
+      when: (security_enabled | default(False))
 
     - role: cheatsheet
