--- a/roles/filebrowser/tasks/main.yml
+++ b/roles/filebrowser/tasks/main.yml
@@ -41,7 +41,7 @@
     name: filebrowser
     image: "{{ filebrowser_container }}:{{ filebrowser_version }}"
     pull: true
-    recreate: yes
+    recreate: true
     volumes:
       - "{{ filebrowser_data_directory }}/config/filebrowser.db:/database/filebrowser.db"
       - "{{ filebrowser_data_directory }}/config/settings.json:/config/settings.json"
@@ -61,14 +61,14 @@
       traefik.enable: "{{ filebrowser_available_externally }}"
       traefik.http.routers.filebrowser.rule: "Host(`{{ filebrowser_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.filebrowser.loadbalancer.server.port: "80"
-      traefik.http.routers.filebrowser.middlewares: "my-headers@file"
+      traefik.http.routers.filebrowser.middlewares: "secure-headers@file"
 
 - name: Syncthing Docker Container
   community.docker.docker_container:
     name: syncthing
     image: linuxserver/syncthing:1.27.6
     pull: true
-    recreate: yes
+    recreate: true
     volumes:
       - "{{ filebrowser_data_directory }}/syncthing_config:/config"
       - "{{ filebrowser_files_directory }}:/mnt"
@@ -84,14 +84,14 @@
       traefik.enable: "{{ filebrowser_available_externally }}"
       traefik.http.routers.syncthing.rule: "Host(`{{ syncthing_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.syncthing.loadbalancer.server.port: "8384"
-      traefik.http.routers.syncthing.middlewares: "my-headers@file"
+      traefik.http.routers.syncthing.middlewares: "secure-headers@file"
 
 - name: SFTPGo Docker Container
   community.docker.docker_container:
     name: sftpgo
     image: drakkan/sftpgo:v2.5.6
     pull: true
-    recreate: yes
+    recreate: true
     user: "{{ filebroswer_uid }}:{{ filebroswer_gid }}"
     volumes:
       - "{{ filebrowser_data_directory }}/sftpgo_config:/var/lib/sftpgo"
@@ -101,7 +101,6 @@
       SFTPGO_WEBDAVD__BINDINGS__0__PORT: "10080"
     ports:
       - "2022:2022"
-      # - "10080:10080"
     restart_policy: unless-stopped
     labels:
       traefik.enable: "{{ filebrowser_available_externally }}"
@@ -109,7 +108,7 @@
       traefik.http.routers.sftpgo.rule: "Host(`{{ sftpgo_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.sftpgo.loadbalancer.server.port: "8080"
       traefik.http.routers.sftpgo.service: "sftpgo"
-      traefik.http.routers.sftpgo.middlewares: "my-headers@file"
+      traefik.http.routers.sftpgo.middlewares: "secure-headers@file"
       ### WebDAV ###
       traefik.http.routers.webdav.rule: Host(`{{ webdav_subdomain }}.{{ server_hostname }}`)
       traefik.http.services.webdav.loadbalancer.server.port: "10080"
@@ -120,7 +119,7 @@
     name: lms
     image: epoupon/lms:3.54.0
     pull: true
-    recreate: yes
+    recreate: true
     user: "{{ filebroswer_uid }}:{{ filebroswer_gid }}"
     volumes:
       - "{{ filebrowser_data_directory }}/lms_config:/var/lms"
@@ -133,4 +132,4 @@
       traefik.http.routers.lms.rule: "Host(`{{ lms_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.lms.loadbalancer.server.port: "5082"
       traefik.http.routers.lms.service: "lms"
-      traefik.http.routers.lms.middlewares: "my-headers@file"
+      traefik.http.routers.lms.middlewares: "secure-headers@file"
