--- a/roles/navidrome/defaults/main.yml
+++ b/roles/navidrome/defaults/main.yml
@@ -4,8 +4,8 @@ navidrome_available_externally: "true"
 
 navidrome_subdomain: "mus"
 
-navidrome_data_directory: "/home/{{ admin_username }}/navidrome_data"
-# navidrome_music_directory: "{{ filerun_data_directory }}/files/Music"
+navidrome_data_directory: "{{ docker_home }}/navidrome_data"
+navidrome_music_directory: "{{ files_home }}/Music"
 
 navidrome_user_and_group: "33:33" # www-data:www-data
 
