--- a/roles/vaultwarden/tasks/main.yml
+++ b/roles/vaultwarden/tasks/main.yml
@@ -18,4 +18,4 @@
       traefik.enable: "{{ vaultwarden_available_externally }}"
       traefik.http.routers.vaultwarden.rule: "Host(`{{ vaultwarden_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.vaultwarden.loadbalancer.server.port: "80"
-      traefik.http.routers.vaultwarden.middlewares: "my-headers@file"
+      traefik.http.routers.vaultwarden.middlewares: "secure-headers@file"
