--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -102,3 +102,6 @@ hemmelig_subdomain: "secret"
 
 nextcloud_enabled: true
 nextcloud_subdomain: "nextcloud"
+
+dockovpn_enabled: true
+dockovpn_subdomain: "vpn"
