Set OpenNIC dns for wg-easy

--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -25,10 +25,11 @@
       - NET_ADMIN
       - SYS_MODULE
     memory: "{{ wireguard_memory }}"
+    # Last DNS is from OpenNIC for *.lib domains, etc.
     env:
       "PASSWORD_HASH": "{{ wireguard_password_hash }}"
       "WG_HOST": "{{ wireguard_subdomain }}.{{ server_hostname }}"
-      "WG_DEFAULT_DNS": "1.1.1.1, 8.8.8.8, 8.8.4.4"
+      "WG_DEFAULT_DNS": "1.1.1.1, 8.8.8.8, 195.10.195.195"
       "LANG": "en"
       "PORT": "51821"
       "WG_PORT": "51820"
