Fix all linter argues

--- a/roles/navidrome/tasks/main.yml
+++ b/roles/navidrome/tasks/main.yml
@@ -10,7 +10,7 @@
     state: directory
     owner: www-data
     group: www-data
-    mode: 0775
+    mode: "0775"
   with_items:
     - "{{ navidrome_data_directory }}/"
 
