--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -44,7 +44,7 @@
 - name: Apply bash settings for admin user
   ansible.builtin.template:
     src: "templates/.bashrc"
-    dest: "/home/{{ admin_username }}/.bash_aliases"
+    dest: "/home/{{ admin_username }}/.bashrc"
     owner: "{{ admin_username }}"
     group: "{{ admin_username }}"
     mode: "0644"
@@ -52,7 +52,17 @@
 - name: Apply bash settings for root user
   ansible.builtin.template:
     src: "templates/.bashrc"
-    dest: "/root/.bash_aliases"
+    dest: "/root/.bashrc"
     owner: root
     group: root
     mode: "0644"
+
+- name: Configure SSH daemon
+  ansible.builtin.template:
+    src: "templates/sshd_config.j2"
+    dest: "/etc/ssh/sshd_config"
+    owner: root
+    group: root
+    mode: "0600"
+    validate: "/usr/sbin/sshd -t -f %s"
+  notify: Restart sshd
