feat: Add Gitea to applications list
Add Gitea application to the list of applications managed by Ansible. This includes adding configuration files for Gitea (roles/gitea), updating inventory files (group_vars/all.yml, inventories/sample/group_vars/sample.yml), modifying the provisioning playbook (provisioning.yml) to include Gitea, and updating the README file (README.md) to reflect the addition of Gitea.

- Update README.md to include Gitea in the applications list
- Add gitea_enabled, gitea_subdomain, and gitea_admin_password variables to group_vars/all.yml
- Add gitea_enabled, gitea_subdomain, and gitea_admin_password variables to inventories/sample/group_vars/sample.yml
- Add a new role for Gitea in provisioning.yml
- Create a new role for Gitea, including defaults/main.yml and tasks/main.yml files

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -109,3 +109,7 @@ nextcloud_subdomain: "nextcloud"
 
 dockovpn_enabled: true
 dockovpn_subdomain: "vpn"
+
+gitea_enabled: true
+gitea_subdomain: "git"
+gitea_admin_password: "change_this"
