--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -105,3 +105,7 @@ nextcloud_subdomain: "nextcloud"
 
 dockovpn_enabled: true
 dockovpn_subdomain: "vpn"
+
+gitea_enabled: true
+gitea_subdomain: "git"
+gitea_admin_password: "change_this"
