feat(docs): add watchtower to applications list
Added watchtower to the applications list in README.md and enabled it in the Ansible playbook. This allows for automatic updates of docker containers.

- Added a new column 'Watchtower updates' to the applications table in README.md to indicate which applications are managed by watchtower.
- Added `watchtower_enabled` variable to group_vars/all.yml and inventories/sample/group_vars/sample.yml to enable/disable watchtower.
- Added a new role 'watchtower' to provisioning.yml to manage the watchtower container.
- Added defaults/main.yml and tasks/main.yml to the roles/watchtower directory to configure the watchtower container.
- Enabled watchtower for mayurifag.github.io in roles/mayurifag_github_io/tasks/main.yml.
- Added a new role for watchtower to manage automatic updates of docker containers.

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -63,6 +63,7 @@ mayurifag_github_io_enabled: true
 lazydocker_enabled: true
 docker_enabled: true
 security_enabled: true
+watchtower_enabled: true
 
 wireguard_enabled: true
 wireguard_subdomain: "wg"
