--- a/provisioning.yml
+++ b/provisioning.yml
@@ -50,6 +50,11 @@
         - lazydocker
       when: (lazydocker_enabled | default(False))
 
+    - role: watchtower
+      tags:
+        - watchtower
+      when: (watchtower_enabled | default(False))
+
     ###
     ### Docker applications
     ###
