--- a/roles/mayurifag_github_io/tasks/main.yml
+++ b/roles/mayurifag_github_io/tasks/main.yml
@@ -12,3 +12,4 @@
       traefik.http.routers.mayurifag_github_io.rule: "Host(`{{ server_hostname }}`)"
       traefik.http.services.mayurifag_github_io.loadbalancer.server.port: "80"
       traefik.http.routers.mayurifag_github_io.middlewares: "secure-headers@file"
+      com.centurylinklabs.watchtower.enable: "true"
