chore(infra): update Portainer and proxy images
Updated Portainer and proxy images to leverage Watchtower for automated updates. This improves the maintainability of the infrastructure by automating container updates.

- Updated Portainer image to `portainer/portainer-ce:lts` in `roles/portainer/tasks/main.yml` to use a Long Term Support version.
- Added `com.centurylinklabs.watchtower.enable: "true"` label to Portainer and proxy containers in `roles/portainer/tasks/main.yml` and `roles/proxy/tasks/main.yml` to enable Watchtower monitoring.
- Changed Watchtower update schedule to run every 30 minutes in `roles/watchtower/defaults/main.yml`.
- Removed the Whattocommit application from the README.md file.

--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -1,9 +1,4 @@
 ---
-- name: Delete Portainer directories
-  ansible.builtin.file:
-    path: "{{ portainer_data_directory }}"
-    state: absent
-
 - name: Create Portainer Directories
   ansible.builtin.file:
     path: "{{ item }}"
@@ -14,7 +9,7 @@
 - name: Portainer Docker Container
   community.docker.docker_container:
     name: portainer
-    image: portainer/portainer-ce:latest
+    image: portainer/portainer-ce:lts
     pull: true
     recreate: true
     volumes:
@@ -28,3 +23,4 @@
       traefik.http.routers.portainer.rule: "Host(`{{ portainer_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.portainer.loadbalancer.server.port: "9000"
       traefik.http.routers.portainer.middlewares: "secure-headers@file"
+      com.centurylinklabs.watchtower.enable: "true"
