--- a/roles/watchtower/defaults/main.yml
+++ b/roles/watchtower/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 watchtower_enabled: true
 watchtower_image: containrrr/watchtower:latest
-watchtower_schedule: "0 */5 * * * *"
+# every 30 minutes
+watchtower_schedule: "0 */30 * * * *"
 watchtower_cleanup: true
 watchtower_label_enable: true
