chore(roles): update navidrome image to 0.55.2
Updated the navidrome Docker image to version 0.55.2 for improved functionality and security.

- Updated navidrome_image variable in roles/navidrome/defaults/main.yml to use version 0.55.2.
- Updated navidrome Docker container image in roles/navidrome/tasks/main.yml to use the updated variable.
- Removed outdated crypto-related entries from roles/blocky/templates/config.yaml.j2 to streamline configuration.

--- a/roles/navidrome/defaults/main.yml
+++ b/roles/navidrome/defaults/main.yml
@@ -2,6 +2,7 @@
 navidrome_enabled: true
 navidrome_available_externally: "true"
 
+navidrome_image: deluan/navidrome:0.55.2
 navidrome_subdomain: "mus"
 
 navidrome_data_directory: "{{ docker_home }}/navidrome_data"
