chore(ci): update ubuntu version in lint workflow
Updated the ubuntu version used in the lint workflow from ubuntu-20.04 to ubuntu-latest for better compatibility and access to the latest security updates.

- Updated the `runs-on` setting in `.github/workflows/lint.yml` from `ubuntu-20.04` to `ubuntu-latest`.
- Updated a link in `README.md` to use markdown link syntax for better rendering.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,7 +11,7 @@ name: Linters
 
 jobs:
   editorconfig:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: editorconfig-checker/action-editorconfig-checker@main
