Use API endpoint inside watchtower container

--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -59,7 +59,6 @@ mayurifag_github_io_enabled: true
 lazydocker_enabled: true
 docker_enabled: true
 security_enabled: true
-watchtower_enabled: true
 
 wireguard_enabled: true
 wireguard_subdomain: "wg"
@@ -107,3 +106,7 @@ dockovpn_subdomain: "vpn"
 gitea_enabled: true
 gitea_subdomain: "git"
 gitea_admin_password: "change_this"
+
+watchtower_enabled: true
+watchtower_subdomain: "watchtower"
+watchtower_http_api_token: change_this
