--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -63,7 +63,6 @@ mayurifag_github_io_enabled: true
 lazydocker_enabled: true
 docker_enabled: true
 security_enabled: true
-watchtower_enabled: true
 
 wireguard_enabled: true
 wireguard_subdomain: "wg"
@@ -111,3 +110,7 @@ dockovpn_subdomain: "vpn"
 gitea_enabled: true
 gitea_subdomain: "git"
 gitea_admin_password: "change_this"
+
+watchtower_enabled: true
+watchtower_subdomain: "watchtower"
+watchtower_http_api_token: change_this
