--- a/roles/watchtower/defaults/main.yml
+++ b/roles/watchtower/defaults/main.yml
@@ -1,7 +1,11 @@
 ---
 watchtower_enabled: true
+watchtower_available_externally: "true"
+
+watchtower_subdomain: "watchtower"
+watchtower_http_api_token: change_this
+
 watchtower_image: containrrr/watchtower:latest
-# every 30 minutes
-watchtower_schedule: "0 */30 * * * *"
-watchtower_cleanup: true
-watchtower_label_enable: true
+
+# every week
+watchtower_command: --debug --label-enable --http-api-update --http-api-periodic-polls --cleanup --interval 604800
