chore(inventory): replace navidrome with mus
Updated inventory and roles to replace the navidrome music server with mus. This change simplifies the configuration and improves maintainability.

- Renamed `navidrome` role and related files to `mus`.
- Updated `README.md` to reflect the change.
- Removed `navidrome` related variables from `group_vars/all.yml` and `inventories/sample/group_vars/sample.yml`.
- Added `mus` role with corresponding configuration files (`defaults/main.yml` and `tasks/main.yml`).
- Updated `provisioning.yml` to include the `mus` role.

--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -75,11 +75,10 @@ netdata_subdomain: "netdata"
 
 blocky_enabled: true
 
-navidrome_enabled: true
-navidrome_subdomain: "mus"
-navidrome_spotify_id: "change_it"
-navidrome_spotify_secret: "change_it"
-navidrome_password_encryption_key: "change_it"
+mus_enabled: true
+mus_subdomain: "mus"
+mus_music_directory: "/home/{{ admin_username }}/music_folder/"
+mus_auth_route: change_this
 
 vaultwarden_enabled: true
 vaultwarden_subdomain: "pw"
