chore(mus): update mus docker volume mount
Updated the docker volume mount path for the mus role to improve consistency and security. The previous path exposed sensitive data.

- Changed docker volume mount from `{{ mus_music_directory }}:/music:ro` to `{{ mus_music_directory }}:/app_data/music:ro` to improve security by isolating sensitive data.
- Renamed environment variable `SECRET_AUTH_ROUTE` to `SECRET_KEY` for better clarity and security.

--- a/roles/mus/tasks/main.yml
+++ b/roles/mus/tasks/main.yml
@@ -6,9 +6,9 @@
     pull: true
     recreate: true
     volumes:
-      - "{{ mus_music_directory }}:/music:ro"
+      - "{{ mus_music_directory }}:/app_data/music:ro"
     env:
-      SECRET_AUTH_ROUTE: "{{ mus_auth_route }}"
+      SECRET_KEY: "{{ mus_auth_route }}"
     restart_policy: unless-stopped
     memory: "{{ mus_memory }}"
     labels:
