--- a/roles/mus/defaults/main.yml
+++ b/roles/mus/defaults/main.yml
@@ -2,7 +2,7 @@
 mus_enabled: true
 mus_available_externally: "true"
 
-mus_docker_image: mayurifag/mus
+mus_docker_image: ghcr.io/mayurifag/mus:latest
 mus_subdomain: "mus"
 mus_music_directory: "/home/{{ admin_username }}/music_folder/"
 mus_auth_route: change_this
