chore(mus): allow write access to music volume
The music volume for the mus service was mounted as read-only, preventing any potential modifications or data persistence beyond initial seeding. This change updates the volume mount to be read-write.

- Changed the mus service volume mount from `:ro` to `:rw` in roles/mus/tasks/main.yml to allow write access to the music directory.

--- a/roles/mus/tasks/main.yml
+++ b/roles/mus/tasks/main.yml
@@ -6,7 +6,7 @@
     pull: true
     recreate: true
     volumes:
-      - "{{ mus_music_directory }}:/app_data/music:ro"
+      - "{{ mus_music_directory }}:/app_data/music:rw"
     env:
       SECRET_KEY: "{{ mus_auth_route }}"
     restart_policy: unless-stopped
